--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,8 @@
 body{
     background: rgb(40, 40, 40);
     color: rgb(198, 193, 193);
+    margin: 0;
+    padding: 0;
 }
 
 header {
@@ -8,36 +10,52 @@ header {
     width: 100vw;
     position: fixed;
     z-index: 100;
+    display: grid;
+    justify-content: center;
 }
 
-nav {
-    float: left;
+
+div {
+    display: grid;
+    justify-content: center;
+    align-items: center;
 }
 
 
-nav ul {
-    list-style: none;
-    overflow: hidden;
-}
 
-nav ul li {
-    float: left;
+div ul li {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
+    padding: 3px;
 }
 
-nav ul li a {
-    display: block; 
-    padding: 20px;
+div ul li a {
     color: rgb(126, 126, 126);
-    text-decoration: none;
+    
 }
 
-nav ul li:hover {
-    background: #a16300;
+div ul li:hover {
+    background: #151515;
     color: rgb(195, 195, 195);
 }
 
-nav ul li a:hover {
+div ul li a:hover {
     color: rgb(255, 255, 255);
 }
+
+a {
+    color: white;
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
+h2 {
+    display: grid;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+
